filtered non-static non-private attributes